--- a/r5dev/vproj/dedicated.vcxproj
+++ b/r5dev/vproj/dedicated.vcxproj
@@ -368,21 +368,27 @@
     <ClInclude Include="..\public\tier0\annotations.h" />
     <ClInclude Include="..\public\tier0\basetypes.h" />
     <ClInclude Include="..\public\tier0\commonmacros.h" />
+    <ClInclude Include="..\public\tier0\crashhandler.h" />
     <ClInclude Include="..\public\tier0\dbg.h" />
     <ClInclude Include="..\public\tier0\dbgflag.h" />
     <ClInclude Include="..\public\tier0\fasttimer.h" />
     <ClInclude Include="..\public\tier0\frametask.h" />
     <ClInclude Include="..\public\tier0\jobthread.h" />
+    <ClInclude Include="..\public\tier0\memaddr.h" />
     <ClInclude Include="..\public\tier0\memalloc.h" />
     <ClInclude Include="..\public\tier0\memdbgoff.h" />
     <ClInclude Include="..\public\tier0\memdbgon.h" />
+    <ClInclude Include="..\public\tier0\module.h" />
     <ClInclude Include="..\public\tier0\platform.h" />
     <ClInclude Include="..\public\tier0\platform_internal.h" />
+    <ClInclude Include="..\public\tier0\sigcache.h" />
     <ClInclude Include="..\public\tier0\threadtools.h" />
     <ClInclude Include="..\public\tier0\tslist.h" />
     <ClInclude Include="..\public\tier0\valve_off.h" />
     <ClInclude Include="..\public\tier0\valve_on.h" />
+    <ClInclude Include="..\public\tier0\vtable.h" />
     <ClInclude Include="..\public\tier0\wchartypes.h" />
+    <ClInclude Include="..\public\tier1\binstream.h" />
     <ClInclude Include="..\public\tier1\bitbuf.h" />
     <ClInclude Include="..\public\tier1\byteswap.h" />
     <ClInclude Include="..\public\tier1\characterset.h" />
@@ -396,6 +402,7 @@
     <ClInclude Include="..\public\tier1\NetKey.h" />
     <ClInclude Include="..\public\tier1\stringpool.h" />
     <ClInclude Include="..\public\tier1\strtools.h" />
+    <ClInclude Include="..\public\tier1\utility.h" />
     <ClInclude Include="..\public\tier1\utlblockmemory.h" />
     <ClInclude Include="..\public\tier1\utlbuffer.h" />
     <ClInclude Include="..\public\tier1\utldict.h" />
@@ -413,13 +420,6 @@
     <ClInclude Include="..\public\tier2\renderutils.h" />
     <ClInclude Include="..\public\tier2\socketcreator.h" />
     <ClInclude Include="..\public\trace.h" />
-    <ClInclude Include="..\public\utility\binstream.h" />
-    <ClInclude Include="..\public\utility\memaddr.h" />
-    <ClInclude Include="..\public\utility\module.h" />
-    <ClInclude Include="..\public\utility\sigcache.h" />
-    <ClInclude Include="..\public\utility\utility.h" />
-    <ClInclude Include="..\public\utility\vdf_parser.h" />
-    <ClInclude Include="..\public\utility\vtable.h" />
     <ClInclude Include="..\public\worldsize.h" />
     <ClInclude Include="..\rtech\rtech_utils.h" />
     <ClInclude Include="..\rtech\rtech_game.h" />
@@ -506,7 +506,6 @@
     <ClInclude Include="..\tier0\commandline.h" />
     <ClInclude Include="..\tier0\cpu.h" />
     <ClInclude Include="..\tier0\cputopology.h" />
-    <ClInclude Include="..\tier0\crashhandler.h" />
     <ClInclude Include="..\tier0\interface.h" />
     <ClInclude Include="..\tier0\memstd.h" />
     <ClInclude Include="..\vpc\IAppSystem.h" />
@@ -630,12 +629,6 @@
     <ClCompile Include="..\public\appframework\IAppSystemGroup.cpp" />
     <ClCompile Include="..\public\datamap.cpp" />
     <ClCompile Include="..\public\networkvar.cpp" />
-    <ClCompile Include="..\public\utility\binstream.cpp" />
-    <ClCompile Include="..\public\utility\memaddr.cpp" />
-    <ClCompile Include="..\public\utility\module.cpp" />
-    <ClCompile Include="..\public\utility\sigcache.cpp" />
-    <ClCompile Include="..\public\utility\utility.cpp" />
-    <ClCompile Include="..\public\utility\vtable.cpp" />
     <ClCompile Include="..\rtech\rtech_utils.cpp" />
     <ClCompile Include="..\rtech\rtech_game.cpp" />
     <ClCompile Include="..\rtech\stryder\stryder.cpp" />
@@ -649,8 +642,13 @@
     <ClCompile Include="..\tier0\fasttimer.cpp" />
     <ClCompile Include="..\tier0\frametask.cpp" />
     <ClCompile Include="..\tier0\jobthread.cpp" />
+    <ClCompile Include="..\tier0\memaddr.cpp" />
+    <ClCompile Include="..\tier0\module.cpp" />
     <ClCompile Include="..\tier0\platform.cpp" />
+    <ClCompile Include="..\tier0\sigcache.cpp" />
     <ClCompile Include="..\tier0\threadtools.cpp" />
+    <ClCompile Include="..\tier0\vtable.cpp" />
+    <ClCompile Include="..\tier1\binstream.cpp" />
     <ClCompile Include="..\tier1\bitbuf.cpp" />
     <ClCompile Include="..\tier1\characterset.cpp" />
     <ClCompile Include="..\tier1\cmd.cpp" />
@@ -661,6 +659,7 @@
     <ClCompile Include="..\tier1\NetKey.cpp" />
     <ClCompile Include="..\tier1\splitstring.cpp" />
     <ClCompile Include="..\tier1\strtools.cpp" />
+    <ClCompile Include="..\tier1\utility.cpp" />
     <ClCompile Include="..\tier1\utlbuffer.cpp" />
     <ClCompile Include="..\tier1\utlstring.cpp" />
     <ClCompile Include="..\tier2\curlutils.cpp" />
