--- a/r5dev/vproj/pluginsdk.vcxproj
+++ b/r5dev/vproj/pluginsdk.vcxproj
@@ -193,17 +193,17 @@
     </ClCompile>
     <ClCompile Include="..\pluginsdk\dllmain.cpp" />
     <ClCompile Include="..\pluginsdk\pluginsdk.cpp" />
-    <ClCompile Include="..\public\utility\memaddr.cpp" />
-    <ClCompile Include="..\public\utility\module.cpp" />
-    <ClCompile Include="..\public\utility\utility.cpp" />
+    <ClCompile Include="..\tier0\memaddr.cpp" />
+    <ClCompile Include="..\tier0\module.cpp" />
+    <ClCompile Include="..\tier1\utility.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\core\stdafx.h" />
     <ClInclude Include="..\pluginsdk\ifactory.h" />
     <ClInclude Include="..\pluginsdk\pluginsdk.h" />
-    <ClInclude Include="..\public\utility\memaddr.h" />
-    <ClInclude Include="..\public\utility\module.h" />
-    <ClInclude Include="..\public\utility\utility.h" />
+    <ClInclude Include="..\public\tier0\memaddr.h" />
+    <ClInclude Include="..\public\tier0\module.h" />
+    <ClInclude Include="..\public\tier1\utility.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
