--- a/r5dev/vproj/sdklauncher.vcxproj
+++ b/r5dev/vproj/sdklauncher.vcxproj
@@ -212,10 +212,10 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Profile|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="..\public\utility\binstream.cpp" />
-    <ClCompile Include="..\public\utility\utility.cpp" />
     <ClCompile Include="..\sdklauncher\basepanel.cpp" />
     <ClCompile Include="..\sdklauncher\sdklauncher.cpp" />
+    <ClCompile Include="..\tier1\binstream.cpp" />
+    <ClCompile Include="..\tier1\utility.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="..\resource\sdklauncher.rc" />
@@ -227,8 +227,8 @@
   <ItemGroup>
     <ClInclude Include="..\core\stdafx.h" />
     <ClInclude Include="..\launcher\launcherdefs.h" />
-    <ClInclude Include="..\public\utility\binstream.h" />
-    <ClInclude Include="..\public\utility\utility.h" />
+    <ClInclude Include="..\public\tier1\binstream.h" />
+    <ClInclude Include="..\public\tier1\utility.h" />
     <ClInclude Include="..\sdklauncher\basepanel.h" />
     <ClInclude Include="..\sdklauncher\sdklauncher.h" />
     <ClInclude Include="..\sdklauncher\sdklauncher_const.h" />
