--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,12 +5,7 @@ include( "r5dev/cmake/Configure.cmake" )
 include( "r5dev/cmake/Macros.cmake" )
 include( "r5dev/cmake/Options.cmake" )
 
-set( CMAKE_CXX_STANDARD 17 )
-set( CMAKE_CXX_STANDARD_REQUIRED True )
-
-set( ENGINE_SOURCE_DIR ${CMAKE_SOURCE_DIR}/r5dev )
-set( GLOBAL_PCH ${ENGINE_SOURCE_DIR}/core/stdafx.h ) # Global precompiled header shared among all libraries
-
+initial_setup()
 define_compiler_variables()
 setup_build_configurations()
 apply_project_settings()
