CMake code improvements
Use the 'add_module' macro to add modules without creating duplicate code. This macro also takes a reuse PCH as parameter, so modules that need a precompiled header, could reuse those from different targets that compile them. This commit also restructures the group order of the generated solution files for easier code navigation.

--- a/r5dev/appframework/CMakeLists.txt
+++ b/r5dev/appframework/CMakeLists.txt
@@ -1,7 +1,5 @@
 cmake_minimum_required( VERSION 3.16 )
-
-project( appframework )
-add_library( ${PROJECT_NAME} )
+add_module( "lib" "appframework" "tier0" ${FOLDER_CONTEXT} )
 
 start_sources()
 
@@ -15,4 +13,3 @@ add_sources( SOURCE_GROUP "Public"
 )
 
 end_sources()
-target_precompile_headers( ${PROJECT_NAME} REUSE_FROM tier0 )
