--- a/r5dev/game/CMakeLists.txt
+++ b/r5dev/game/CMakeLists.txt
@@ -1,7 +1,5 @@
 cmake_minimum_required( VERSION 3.16 )
-
-project( gamedll )
-add_library( ${PROJECT_NAME} )
+add_module( "lib" "game" "vpc" ${FOLDER_CONTEXT} )
 
 start_sources()
 
@@ -75,5 +73,7 @@ add_sources( SOURCE_GROUP "Client"
 
 end_sources()
 
-target_include_directories( ${PROJECT_NAME} PRIVATE "${ENGINE_SOURCE_DIR}/tier0/" "${ENGINE_SOURCE_DIR}/tier1/" )
-target_precompile_headers( ${PROJECT_NAME} REUSE_FROM tier0 )
+target_include_directories( ${PROJECT_NAME} PRIVATE
+    "${ENGINE_SOURCE_DIR}/tier0/"
+    "${ENGINE_SOURCE_DIR}/tier1/"
+)
