--- a/r5dev/rtech/CMakeLists.txt
+++ b/r5dev/rtech/CMakeLists.txt
@@ -1,7 +1,5 @@
 cmake_minimum_required( VERSION 3.16 )
-
-project( rtech )
-add_library( ${PROJECT_NAME} )
+add_module( "lib" "rtech" "vpc" ${FOLDER_CONTEXT} )
 
 start_sources()
 
@@ -23,4 +21,3 @@ add_sources( SOURCE_GROUP "Stryder"
 )
 
 end_sources()
-target_precompile_headers( ${PROJECT_NAME} REUSE_FROM vpc )
