--- a/r5dev/vgui/CMakeLists.txt
+++ b/r5dev/vgui/CMakeLists.txt
@@ -1,7 +1,5 @@
 cmake_minimum_required( VERSION 3.16 )
-
-project( vgui )
-add_library( ${PROJECT_NAME} )
+add_module( "lib" "vgui" "vpc" ${FOLDER_CONTEXT} )
 
 start_sources()
 
@@ -16,4 +14,3 @@ add_sources( SOURCE_GROUP "Runtime"
 )
 
 end_sources()
-target_precompile_headers( ${PROJECT_NAME} REUSE_FROM vpc )
