--- a/r5dev/materialsystem/CMakeLists.txt
+++ b/r5dev/materialsystem/CMakeLists.txt
@@ -1,7 +1,5 @@
 cmake_minimum_required( VERSION 3.16 )
-
-project( materialsystem )
-add_library( ${PROJECT_NAME} )
+add_module( "lib" "materialsystem" "vpc" ${FOLDER_CONTEXT} )
 
 start_sources()
 
@@ -15,4 +13,3 @@ add_sources( SOURCE_GROUP "Core"
 )
 
 end_sources()
-target_precompile_headers( ${PROJECT_NAME} REUSE_FROM vpc )
