--- a/r5dev/pluginsdk/CMakeLists.txt
+++ b/r5dev/pluginsdk/CMakeLists.txt
@@ -1,7 +1,5 @@
 cmake_minimum_required( VERSION 3.16 )
-
-project( PluginSDK )
-add_library( ${PROJECT_NAME} SHARED )
+add_module( "shared_lib" "PluginSDK" "vpc" ${FOLDER_CONTEXT} )
 
 start_sources()
 
@@ -13,8 +11,6 @@ add_sources( SOURCE_GROUP "Core"
 )
 
 end_sources()
-
-target_precompile_headers( ${PROJECT_NAME} REUSE_FROM vpc )
 
 target_link_libraries( ${PROJECT_NAME} PRIVATE
     "tier0"
