--- a/r5dev/protoc/CMakeLists.txt
+++ b/r5dev/protoc/CMakeLists.txt
@@ -1,7 +1,5 @@
 cmake_minimum_required( VERSION 3.16 )
-
-project( protocol_pb )
-add_library( ${PROJECT_NAME} )
+add_module( "lib" "protocol_pb" "vpc" ${FOLDER_CONTEXT} )
 
 start_sources()
 
@@ -18,4 +16,3 @@ add_sources( SOURCE_GROUP "SigCache"
 )
 
 end_sources()
-target_precompile_headers( ${PROJECT_NAME} REUSE_FROM vpc )
