--- a/r5dev/vscript/CMakeLists.txt
+++ b/r5dev/vscript/CMakeLists.txt
@@ -1,7 +1,5 @@
 cmake_minimum_required( VERSION 3.16 )
-
-project( vscript )
-add_library( ${PROJECT_NAME} )
+add_module( "lib" "vscript" "vpc" ${FOLDER_CONTEXT} )
 
 start_sources()
 
@@ -28,4 +26,3 @@ add_sources( SOURCE_GROUP "Public"
 )
 
 end_sources()
-target_precompile_headers( ${PROJECT_NAME} REUSE_FROM vpc )
