--- a/r5dev/vstdlib/CMakeLists.txt
+++ b/r5dev/vstdlib/CMakeLists.txt
@@ -1,7 +1,5 @@
 cmake_minimum_required( VERSION 3.16 )
-
-project( vstdlib )
-add_library( ${PROJECT_NAME} )
+add_module( "lib" "vstdlib" "vpc" ${FOLDER_CONTEXT} )
 
 start_sources()
 
@@ -16,7 +14,7 @@ add_sources( SOURCE_GROUP "Private"
 )
 
 end_sources()
-target_precompile_headers( ${PROJECT_NAME} REUSE_FROM vpc )
+
 target_include_directories( ${PROJECT_NAME} PRIVATE 
     "${ENGINE_SOURCE_DIR}/tier0/"
     "${ENGINE_SOURCE_DIR}/tier1/"
