Fix code crash caused by missing resource file
Crashes when the developer console gets invoked due to missing textures.

--- a/r5dev/core/CMakeLists.txt
+++ b/r5dev/core/CMakeLists.txt
@@ -4,6 +4,7 @@ add_module( "shared_lib" "gamesdk" "vpc" ${FOLDER_CONTEXT} )
 start_sources()
 
 add_sources( SOURCE_GROUP "Core"
+    "${ENGINE_SOURCE_DIR}/resource/r5dev.rc"
     "assert.h"
     "dllmain.cpp"
     "init.cpp"
