--- a/r5dev/rtech/CMakeLists.txt
+++ b/r5dev/rtech/CMakeLists.txt
@@ -1,21 +1,38 @@
 cmake_minimum_required( VERSION 3.16 )
-add_module( "lib" "rtech" "vpc" ${FOLDER_CONTEXT} )
+add_module( "lib" "rtech_game" "vpc" ${FOLDER_CONTEXT} )
 
 start_sources()
 
-add_sources( SOURCE_GROUP "Private"
+add_sources( SOURCE_GROUP "Source"
    "rtech_game.cpp"
    "rtech_game.h"
+)
+
+end_sources()
+
+add_module( "lib" "rtech_tools" "vpc" ${FOLDER_CONTEXT} )
+
+start_sources()
+
+add_sources( SOURCE_GROUP "Source"
    "rtech_utils.cpp"
    "rtech_utils.h"
 )
 
-add_sources( SOURCE_GROUP "RUI"
+add_module( "lib" "rui" "vpc" ${FOLDER_CONTEXT} )
+
+start_sources()
+
+add_sources( SOURCE_GROUP "Source"
    "rui/rui.cpp"
    "rui/rui.h"
 )
 
-add_sources( SOURCE_GROUP "Stryder"
+add_module( "lib" "stryder" "vpc" ${FOLDER_CONTEXT} )
+
+start_sources()
+
+add_sources( SOURCE_GROUP "Source"
    "stryder/stryder.cpp"
    "stryder/stryder.h"
 )
