Guard mathlib debug globals
Only compile when 'DEBUG_MATHLIB' is set.

--- a/r5dev/mathlib/CMakeLists.txt
+++ b/r5dev/mathlib/CMakeLists.txt
@@ -64,4 +64,5 @@ target_precompile_headers( ${PROJECT_NAME} PRIVATE
 )
 target_compile_definitions( ${PROJECT_NAME} PRIVATE
     "BUILDING_MATHLIB"
+    $<$<OR:$<CONFIG:Debug>,$<CONFIG:Profile>>:DEBUG_MATHLIB>
 )
