Add missing library to PluginSDK
PluginSDK also uses SpdLog for the logger callback sink.

--- a/r5dev/pluginsdk/CMakeLists.txt
+++ b/r5dev/pluginsdk/CMakeLists.txt
@@ -17,6 +17,7 @@ target_link_libraries( ${PROJECT_NAME} PRIVATE
     "libdetours"
     "libprotobuf"
     "liblzham"
+    "libspdlog"
     "protocol_pb"
     "Rpcrt4.lib"
 )
